# ez-term

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  INSTALLATION_COMPLETE.md  INSTALL_INSTRUCTIONS.md  LICENSE  QUICKSTART.md  README.md  RELEASE_PROCESS.md  SETUP_COMPLETE.md  SHELL_INTEGRATION.md  TESTING.md  TEST_RESULTS.md  TEST_SHELL_INTEGRATION.md  TROUBLESHOOTING.md  ez.sh  ez.zsh  install-ez.sh  install.sh  test_installation.sh  vercel.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: AGENTIC_CONTEXT.md  ARCHITECTURE.md  COMMAND_GENERATOR.md  DEVELOPER_GUIDE.md  INSTALLATION.md  OLLAMA_SETUP.md  OS_DETECTION.md  TESTING.md  UPDATE.md
openspec/: project.md
openspec/changes/add-initial-mvp/: proposal.md  tasks.md
openspec/changes/add-initial-mvp/specs/cli-interface/: spec.md
openspec/changes/add-initial-mvp/specs/llm-client/: spec.md
openspec/changes/add-initial-mvp/specs/system-detection/: spec.md
openspec/changes/add-initial-mvp/specs/tool-detection/: spec.md
openspec/changes/add-secure-downloads-and-storage/: design.md  proposal.md  tasks.md
openspec/changes/add-secure-downloads-and-storage/specs/download-verification/: spec.md
openspec/changes/add-secure-downloads-and-storage/specs/secure-credential-storage/: spec.md
openspec/changes/add-setup-wizard/: proposal.md  tasks.md
openspec/changes/add-setup-wizard/specs/cli-interface/: spec.md
openspec/changes/add-setup-wizard/specs/setup-wizard/: spec.md
scripts/: dev-install.sh  ez.sh  ez.zsh  install.sh  verify-install.sh
src/: cli.rs  command_validator.rs  config.rs  context_agent.rs  credentials.rs  lib.rs  llm_client.rs  main.rs  migration.rs  prompt_sanitizer.rs  setup.rs  system_info.rs  tool_detection.rs  update.rs  verification.rs
tests/: e2e_command_generation.rs  e2e_update.rs  test_context_agent.rs
tests/fixtures/: mock_responses.json
tests/integration/: cli_tests.rs  config_tests.rs  llm_client_tests.rs  mod.rs
website/: README.md  package.json  svelte.config.js  vite.config.ts
website/src/lib/components/: CopyButton.svelte  Features.svelte  Footer.svelte  Header.svelte  Hero.svelte  HowItWorks.svelte  QuickStart.svelte  SEO.svelte  TerminalDemo.svelte
website/src/lib/styles/: global.css  terminal.css
website/src/lib/utils/: copyToClipboard.ts  schema.ts
website/src/routes/: +layout.svelte  +page.svelte
website/static/: robots.txt  sitemap.xml
