[package]
name = "ez"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
toml = "0.8"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
rustyline = "14.0"
atty = "0.2"
