[package]
name = "ez-cli"
version = "0.1.0"
edition = "2021"
authors = ["chopshop1"]
description = "AI-powered CLI command generator with multi-backend LLM support"
license = "MIT"
repository = "https://github.com/chopshop1/ez-term"
homepage = "https://github.com/chopshop1/ez-term"
documentation = "https://github.com/chopshop1/ez-term/blob/main/README.md"
readme = "README.md"
keywords = ["cli", "ai", "llm", "command-generator", "ollama"]
categories = ["command-line-utilities"]

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
toml = "0.8"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
rustyline = "14.0"
atty = "0.2"
